--- a/ventura_backend/trading_app/templates/index.html
+++ b/ventura_backend/trading_app/templates/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Ventura Trading App</title>
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Ventura Logo" class="logo">
+        <img src="{% static 'images/logo.png' %}" alt="Ventura Logo" class="logo">
         <h1>Ventura Trading App</h1>
         <nav>
             <a href="#" id="login-link">Login</a>
@@ -21,22 +23,14 @@
         </nav>
     </header>
     <main id="main-content">
-        <!-- Dynamic content will be loaded here -->
-        <div id="investment-settings"></div>
-        <button id="initiate-trade-button">Initiate Trade</button>
-        <div id="live-trades">
-            <select id="live-trades-select" onchange="visualizeLiveTrade(this.value)">
-                <!-- Live trades options will be populated here -->
-            </select>
-        </div>
-        <div id="portfolio"></div>
     </main>
     <footer>
         <p>&copy; 2024 Ventura Trading App</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="js/app.js"></script>
-    <script type="module" src="js/dashboard.js"></script>
-    <script type="module" src="js/portfolio.js"></script>
+    <script type="module" src="{% static 'js/app.js' %}"></script>
+    <script type="module" src="{% static 'js/dashboard.js' %}"></script>
+    <script type="module" src="{% static 'js/portfolio.js' %}"></script>
+    <script type="module" src="{% static 'js/liveTrade.js' %}"></script>
 </body>
 </html>
